<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arne.translogistics_device.RecordDataActivity">


    <Button
        android:id="@+id/btnStartRecording"
        android:layout_width="119dp"
        android:layout_height="71dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/btnStartRecording"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/lblElapsedTime"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtElapsedTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblStartTime" />

    <TextView
        android:id="@+id/lblStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtStartTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblShockLimit" />

    <TextView
        android:id="@+id/txtStartTime"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/lblStartTime"
        app:layout_constraintTop_toBottomOf="@+id/txtShockLimit"
        tools:text="12:00" />

    <FrameLayout
        android:id="@+id/workAnimation"
        android:layout_width="233dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="recording.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/txtRecording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="Recording"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/lblPaackageID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/lblPackageId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPackIdRecData"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/lblPaackageID"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="10228" />

    <TextView
        android:id="@+id/lblRecInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblRecIntervals"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPaackageID" />

    <TextView
        android:id="@+id/lblShockLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblShockLimit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecInt" />

    <TextView
        android:id="@+id/txtRecInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/lblRecInt"
        app:layout_constraintTop_toBottomOf="@+id/txtPackIdRecData"
        tools:text="5 sec" />

    <TextView
        android:id="@+id/txtShockLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/lblShockLimit"
        app:layout_constraintTop_toBottomOf="@+id/txtRecInt"
        tools:text="3000 acc/s^2" />

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="49dp"
        android:layout_height="0dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/lblElapsedTime"
        app:layout_constraintTop_toBottomOf="@+id/txtStartTime" />

</android.support.constraint.ConstraintLayout>
